kubernetes/apps/kube-system/traefik/app/ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
spec:
  rules:
    - host: traefik
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - traefik
